finished delete functionality, created .ejs files for insert function

--- a/views/deleteadvisorSID.ejs
+++ b/views/deleteadvisorSID.ejs
@@ -8,9 +8,9 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the budget to delete.<br><br>
-        <form method="POST" action="/deletedeptbudget">
-            <input type="decimal" name="std_budget" class="form" placeholder="e.g., 10000">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the Student ID to delete.<br><br>
+        <form method="POST" action="/deleteadvSID">
+            <input type="integer" name="std_SID" class="form" placeholder="e.g., 111222">
             <button>Submit</button>
         </form>
     </fieldset>
