--- a/views/deletedepartmentname.ejs
+++ b/views/deletedepartmentname.ejs
@@ -9,7 +9,7 @@
     
 
     <fieldset style="width: fit-content; text-align: center;">Please enter the department name to delete.<br><br>
-        <form method="POST" action="/delete">
+        <form method="POST" action="/deletedeptname">
             <input type="text" name="std_dept_name" class="form" placeholder="e.g., CS">
             <button>Submit</button>
         </form>
