--- a/views/deleteinstructordept.ejs
+++ b/views/deleteinstructordept.ejs
@@ -8,9 +8,9 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the budget to delete.<br><br>
-        <form method="POST" action="/deletedeptbudget">
-            <input type="decimal" name="std_budget" class="form" placeholder="e.g., 10000">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the department to delete.<br><br>
+        <form method="POST" action="/deleteinstdept">
+            <input type="text" name="std_dept" class="form" placeholder="e.g., CS">
             <button>Submit</button>
         </form>
     </fieldset>
