--- a/views/deleteinstructorname.ejs
+++ b/views/deleteinstructorname.ejs
@@ -8,9 +8,9 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the budget to delete.<br><br>
-        <form method="POST" action="/deletedeptbudget">
-            <input type="decimal" name="std_budget" class="form" placeholder="e.g., 10000">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the name to delete.<br><br>
+        <form method="POST" action="/deleteinstname">
+            <input type="text" name="std_name" class="form" placeholder="e.g., John Smith">
             <button>Submit</button>
         </form>
     </fieldset>
