--- a/views/deletestudentID.ejs
+++ b/views/deletestudentID.ejs
@@ -8,9 +8,9 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the budget to delete.<br><br>
-        <form method="POST" action="/deletedeptbudget">
-            <input type="decimal" name="std_budget" class="form" placeholder="e.g., 10000">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the ID to delete.<br><br>
+        <form method="POST" action="/deletestudID">
+            <input type="integer" name="std_ID" class="form" placeholder="e.g., 111222">
             <button>Submit</button>
         </form>
     </fieldset>
