--- a/views/deletestudentcredits.ejs
+++ b/views/deletestudentcredits.ejs
@@ -8,9 +8,9 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the budget to delete.<br><br>
-        <form method="POST" action="/deletedeptbudget">
-            <input type="decimal" name="std_budget" class="form" placeholder="e.g., 10000">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the total credits to delete.<br><br>
+        <form method="POST" action="/deletestudcredits">
+            <input type="decimal" name="std_credits" class="form" placeholder="e.g., 100">
             <button>Submit</button>
         </form>
     </fieldset>
