finished insert functionality with error handling for blank inserts, began JS for search functionality.

--- a/views/searchdepartment.ejs
+++ b/views/searchdepartment.ejs
@@ -8,8 +8,8 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the department information to insert.<br>
-        <form method="POST" action="/insertdept">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the department information to search by.<br>
+        <form method="POST" action="/searchdept">
             <p>Department</p>
             <input type="text" name="std_dept" class="form" placeholder="e.g., CS"><br>
             <p>Building</p>
