--- a/views/searchinstructor.ejs
+++ b/views/searchinstructor.ejs
@@ -8,16 +8,16 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the student information to insert.<br>
-        <form method="POST" action="/insertstud">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the instructor information to search by.<br>
+        <form method="POST" action="/searchins">
             <p>ID</p>
             <input type="integer" name="std_ID" class="form" placeholder="e.g., 111222"><br>
             <p>Name</p>
             <input type="text" name="std_name" class="form" placeholder="e.g., John Smith"><br>
             <p>Department</p>
             <input type="text" name="std_dept" class="form" placeholder="e.g., CS"><br>
-            <p>Total Credits</p>
-            <input type="decimal" name="std_credits" class="form" placeholder="e.g., 50000"><br><br>
+            <p>Salary</p>
+            <input type="decimal" name="std_salary" class="form" placeholder="e.g., 50000"><br><br>
             <button>Submit</button>
         </form>
     </fieldset>
