--- a/views/searchstudent.ejs
+++ b/views/searchstudent.ejs
@@ -8,8 +8,8 @@
 <body>
     
 
-    <fieldset style="width: fit-content; text-align: center;">Please enter the student information to insert.<br>
-        <form method="POST" action="/insertstud">
+    <fieldset style="width: fit-content; text-align: center;">Please enter the student information to search by.<br>
+        <form method="POST" action="/searchstud">
             <p>ID</p>
             <input type="integer" name="std_ID" class="form" placeholder="e.g., 111222"><br>
             <p>Name</p>
